--- a/amazon-clone/public/index.html
+++ b/amazon-clone/public/index.html
@@ -19,6 +19,10 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@200&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;400;700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
